Tillägg: Löpande borttag av temp-filer som inte används Borttag av signeringsfiler som inte används Delete i basen av flera poster görs inom samma transaktion Städat i kod
git-svn-id: svn://svn.sundsvall.se/oep-dev@1926 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18